--- a/Pipfile
+++ b/Pipfile
@@ -5,19 +5,19 @@ name = "pypi"
 
 [packages]
 click = "*"
-colorama = { version = "==0.4.5", sys_platform = "== 'win32'" }
+colorama = { sys_platform = "== 'win32'" }
 jsonpath-ng = "*"
-keyring = "==23.7.0"
+keyring = "*"
 matplotlib = "*"
 mysqlclient = "*"
 numpy = "*"
 openpyxl = "*"
-pandas = "==1.4.3"
-pefile = { version = "==2022.5.30", sys_platform = "== 'win32'" }
+pandas = "*"
+pefile = { sys_platform = "== 'win32'" }
 pyinstaller = "*"
 pyvisa = "*"
 pywin32 = { sys_platform = "== 'win32'" }
-pywin32-ctypes = { version = "==0.2.0", sys_platform = "== 'win32'" }
+pywin32-ctypes = { sys_platform = "== 'win32'" }
 pyyaml = "*"
 scipy = "*"
 sentry-sdk = "*"
