--- a/measure/simulation.yaml
+++ b/measure/simulation.yaml
@@ -30,6 +30,10 @@ devices:
         r: "1.0,0.0,0.0,0.0,2.0,0.0,0.0,0.0,3.0,0.0,0.0,0.0,4.0,0.0,0.0,0.0"
       - q: ":LIST:BIAS:VOLT?"
         r: "-35,-25,-20,-15"
+      - q: "print(errorqueue.count)"
+        r: "0.00000e+00"
+      - q: "print(errorqueue.next())"
+        r: "0.00000e+00  Queue Is Empty  0.00000e+00     2.00000e+00"
     error:
       status_register:
         - q: "*ESR?"
