add Instrument class to handle different instruments

--- a/measure/cv-innopoli.yaml
+++ b/measure/cv-innopoli.yaml
@@ -3,6 +3,7 @@
 instruments:
   pyvisa:
     resource: "GPIB0::17::INSTR"
+    name: "Keithley SMU E4980 (Innopoli)"
     kwargs:
       timeout: 15000
 
