--- a/measure/iv-micronova.yaml
+++ b/measure/iv-micronova.yaml
@@ -32,7 +32,7 @@ chips: # even though this map looks dumb, it is necessary for the box config, wh
     cathode_current: cathode_current
 
 measurements:
-  - name: 0.01v
+  - name: 0.01v sweep
     instrument:
       - "*CLS" # clears the Error Queue
       - "*RST" # performs an instrument reset
@@ -82,7 +82,7 @@ measurements:
       measurements_kwargs:
         int_time: SHORT
 
-  - name: 20v
+  - name: 20v sweep
     instrument:
       - "*CLS" # clears the Error Queue
       - "*RST" # performs an instrument reset
