--- a/.github/workflows/qa.yaml
+++ b/.github/workflows/qa.yaml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Lint with flake8
         run: |
-          flake8 . --show-source --statistics
+          flake8 .
 
       - name: Analysing the code with pylint
         run: |
