--- a/.pylintrc
+++ b/.pylintrc
@@ -437,6 +437,7 @@ disable=raw-checker-failed,
         use-symbolic-message-instead,
         no-member,
         missing-function-docstring,
+        trailing-whitespace,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
