--- a/measure/iv-innopoli.yaml
+++ b/measure/iv-innopoli.yaml
@@ -46,7 +46,7 @@ setups:
       - "smua.measure.autozero = smua.AUTOZERO_OFF" # disables automatic updates to the internal reference measurements of the instrument
       - "smua.measure.lowrangei=1e-9" # sets the lowest measurement range that is used when the instruments is autoranging
       - "vlist = {0.01, 0.008, 0.006, 0.004, 0.002, 0, -0.002, -0.004, -0.006, -0.008, -0.01}" # sets the voltage list
-      - "points = 11" # counts the point
+      - "points = table.getn(vlist)" # counts the point
       #- "stime = 200e-3" # time delay between points
 
       # Buffer
@@ -83,7 +83,7 @@ setups:
       - "smua.measure.autozero = smua.AUTOZERO_OFF" # disables automatic updates to the internal reference measurements of the instrument
       - "smua.measure.lowrangei=1e-9" # sets the lowest measurement range that is used when the instruments is autoranging
       - "vlist = {-10, -9, -8, -7, -6, -5, -4, -3, -2, -1, 0, 1, 2}" # sets the voltage list
-      - "points = 13" # counts the point
+      - "points = table.getn(vlist)" # counts the point
       #- "stime = 200e-3" # time delay between points
 
       # Buffer
