--- a/measure/iv-guard-ring.yaml
+++ b/measure/iv-guard-ring.yaml
@@ -1,10 +1,14 @@
 # Contains a set of instructions for a single chip IV measurement on Keithley SMU 2636 (Innopoli)
 
 instruments:
-  temperature_resource: "PT100MK1-1DCBA1.temperature"
-  pyvisa:
+  temperature:
+    resource: "PT100MK1-1DCBA1.temperature"
+    name: "Temperature sensor"
+    kind: "temperature"
+  main:
     resource: "GPIB0::1::INSTR"
     name: "Keithley SMU 2636 (Innopoli)"
+    kind: "pyvisa"
     invert_voltage: true
     kwargs:
       timeout: 10000
@@ -37,7 +41,7 @@ chips:
     guard_current: guard_current
 
 
-measurements:
+setups:
   - name: 0.01v points
     instrument:
       - "reset()" # resets commands to their default settings
@@ -90,7 +94,7 @@ measurements:
       - "smub.trigger.count = points" # number of points to output
 
     program:
-      measurements_kwargs:
+      condition_kwargs:
         int_time: LONG # depends on smua.measure.nplc value. 0.01 - fast (SHORT), 0.1 - med (MED), 1 - normal (LONG)
 
   - name: 10v points
@@ -149,5 +153,5 @@ measurements:
             abs: true
             value: !!float 5e-3
             message: Current leakage is too low. Check if there is a good contact.
-      measurements_kwargs:
+      condition_kwargs:
         int_time: LONG
