--- a/measure/iv-micronova.yaml
+++ b/measure/iv-micronova.yaml
@@ -2,10 +2,14 @@
 # Run print(instrument.query('*IDN?')) to print the name of instrument
 
 instruments:
-  temperature_resource: "PT100MK1-14A17C.temperature"
-  pyvisa:
+  temperature:
+    resource: "PT100MK1-14A17C.temperature"
+    name: "Temperature sensor"
+    kind: "temperature"
+  main:
     name: "Keithley SMU 4156 (Micronova)"
     resource: "GPIB0::15::INSTR"
+    kind: "pyvisa"
     kwargs:
       timeout: 250000
 
@@ -31,7 +35,7 @@ chips: # even though this map looks dumb, it is necessary for the box config, wh
     anode_current: anode_current
     cathode_current: cathode_current
 
-measurements:
+setups:
   - name: 0.01v sweep
     instrument:
       - "*CLS" # clears the Error Queue
@@ -79,7 +83,7 @@ measurements:
             value: !!float 1e-9
             message: Current leakage is too high. Check if there is a light exposure.
             abs: true
-      measurements_kwargs:
+      condition_kwargs:
         int_time: SHORT
 
   - name: 20v sweep
@@ -117,5 +121,5 @@ measurements:
           min:
             value: !!float 5e-3
             message: Current leakage is too low. Check if there is a good contact.
-      measurements_kwargs:
+      condition_kwargs:
         int_time: SHORT
