--- a/measure/iv-one-sweep.yaml
+++ b/measure/iv-one-sweep.yaml
@@ -1,10 +1,14 @@
 # Contains a set of instructions for a single chip IV measurement on Keithley SMU 2636 (Innopoli)
 
 instruments:
-  temperature_resource: "PT100MK1-1DCBA1.temperature"
-  pyvisa:
+  temperature:
+    resource: "PT100MK1-1DCBA1.temperature"
+    name: "Temperature sensor"
+    kind: "temperature"
+  main:
     resource: "GPIB0::1::INSTR"
     name: "Keithley SMU 2636 (Innopoli)"
+    kind: "pyvisa"
     invert_voltage: true
     kwargs:
       timeout: 10000
@@ -29,7 +33,7 @@ chips:
     anode_current: anode_current
 
 
-measurements:
+setups:
   - name: 20v
     instrument:
       - "reset()" # resets commands to their default settings
@@ -70,5 +74,5 @@ measurements:
             abs: true
             value: !!float 5e-3
             message: Current leakage is too low. Check if there is a good contact.
-      measurements_kwargs:
+      condition_kwargs:
         int_time: LONG
