--- a/.github/workflows/qa.yaml
+++ b/.github/workflows/qa.yaml
@@ -26,7 +26,7 @@ jobs:
 
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: '3.12.2'
           cache: 'pipenv'
 
       - name: Install dependencies
@@ -48,3 +48,6 @@ jobs:
 
       - name: Run measure unit tests
         run: timeout 1m pytest ./measure || exit 1
+
+      - name: Run ORM unit tests
+        run: timeout 1m pytest ./orm || exit 1
