--- a/measure/iv-micronova.yaml
+++ b/measure/iv-micronova.yaml
@@ -30,10 +30,10 @@ measure:
     command: ":DATA? 'I3'"
     type: "query_ascii_values"
 
-chips: # even though this map looks dumb, it is necessary for the box config, which has 3 chips
-  - voltage_input: voltage_input
-    anode_current: anode_current
-    cathode_current: cathode_current
+chips:
+  - voltage_input:
+    anode_current:
+    cathode_current:
 
 setups:
   - name: 0.01v sweep
@@ -72,7 +72,10 @@ setups:
       - ":PAGE:DISP:LIST 'V3','I1','I3'"  # selects the variable names for LIST display
       - ":PAGE:GLIS:SCAL:AUTO ONCE"
     program:
-      minimum: true
+      minimum:
+        x: voltage_input
+        y: anode_current
+        timeout: 0.5
       validation:
         anode_current[0]:
           min:
