--- a/.pylintrc
+++ b/.pylintrc
@@ -438,6 +438,9 @@ disable=raw-checker-failed,
         no-member,
         missing-function-docstring,
         trailing-whitespace,
+        missing-module-docstring,
+        missing-class-docstring,
+        no-value-for-parameter,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
@@ -564,7 +567,7 @@ contextmanager-decorators=contextlib.contextmanager
 # List of members which are set dynamically and missed by pylint inference
 # system, and so shouldn't trigger E1101 when accessed. Python regular
 # expressions are accepted.
-generated-members=
+generated-members=pass_analyzer_context
 
 # Tells whether to warn about missing members when the owner of the attribute
 # is inferred to be None.
