--- a/measure/micronova-calibration-smu3.yaml
+++ b/measure/micronova-calibration-smu3.yaml
@@ -21,13 +21,10 @@ measure:
   - command: "FORM:DATA ASC" # specifies the data format as ASCII
     type: "write"
   - name: voltage_input
-    command: ":DATA? 'V4'"
+    command: ":DATA? 'V3'"
     type: "query_ascii_values"
   - name: anode_current
-    command: ":DATA? 'I1'"
-    type: "query_ascii_values"
-  - name: guard_current
-    command: ":DATA? 'I2'"
+    command: ":DATA? 'I3'"
     type: "query_ascii_values"
   - name: cathode_current
     command: ":DATA? 'I4'"
@@ -37,7 +34,6 @@ chips:
   - voltage_input:
     anode_current:
     cathode_current:
-    guard_current:
 
 setups:
   - name: 0.01v sweep
@@ -45,39 +41,36 @@ setups:
       - "*CLS" # clears the Error Queue
       - "*RST" # performs an instrument reset
       # sets the voltage output MODE
-      - ":PAGE:CHAN:SMU1:MODE V"
-      - ":PAGE:CHAN:SMU2:MODE V"
       - ":PAGE:CHAN:SMU3:MODE V"
       - ":PAGE:CHAN:SMU4:MODE V"
 
-      - ":PAGE:CHAN:SMU1:FUNC CONS"  # sets the function (FCTN) of SMU1. SMU1 - Emitter
-      - ":PAGE:CHAN:SMU2:FUNC CONS"  # sets the function (FCTN) of SMU2. SMU2 - Emitter
-      - ":PAGE:CHAN:SMU3:FUNC CONS"  # sets the function (FCTN) of SMU3. SMU3 - Emitter
-      - ":PAGE:CHAN:SMU4:FUNC VAR1"  # sets the function (FCTN) of SMU4. SMU4 - Base
+      
+      - ":PAGE:CHAN:SMU3:FUNC VAR1"
+      - ":PAGE:CHAN:SMU4:FUNC CONS" 
 
       - ":PAGE:CHAN:MODE SWEEP"  # sets the sweep measurement mode
 
 
       - ":PAGE:MEAS:VAR1:MODE SINGLE"  # sets the SWEEP MODE of VAR1 for sweep measurement.(Single)
       - ":PAGE:MEAS:VAR1:SPAC LIN"  # selects the sweep type of VAR1 as linear staircase
-      - ":PAGE:MEAS:VAR1:START 0.01"  # sets the sweep START value of VAR1.
-      - ":PAGE:MEAS:VAR1:STEP 0.001"  # sets the sweep STEP value of VAR1 for the linear sweep.
-      - ":PAGE:MEAS:VAR1:STOP -0.01"  # sets the sweep STOP value of VAR1.
+      - ":PAGE:MEAS:VAR1:START 0.1"  # sets the sweep START value of VAR1.
+      - ":PAGE:MEAS:VAR1:STEP -0.001"  # sets the sweep STEP value of VAR1 for the linear sweep.
+      - ":PAGE:MEAS:VAR1:STOP -0.1"  # sets the sweep STOP value of VAR1.
       - ":PAGE:MEAS:VAR1:COMP 0.1"  # sets the COMPLIANCE value of VAR1.
-      - ":PAGE:MEAS:VAR1:PCOM:STATE OFF"  # sets the power compliance of VAR1 to disable
+      - ":PAGE:MEAS:VAR1:PCOM:STATE OFF"
       #      - ":PAGE:MEAS:HTIM 0"  # sets the HOLD TIME of sweep measurement
       #      - ":PAGE:MEAS:DEL 0"  # sets the DELAY TIME of SMU.
 
-      - ":PAGE:MEAS:CONS:SMU1 0"  # sets the constant SOURCE value of SMU1 for sweep measurements
-      - ":PAGE:MEAS:CONS:SMU2 0"
-      - ":PAGE:MEAS:CONS:SMU3 0"  # sets the constant SOURCE value of SMU3 for sweep measurements
+      - ":PAGE:MEAS:CONS:SMU3 0" 
+      - ":PAGE:MEAS:CONS:SMU4 0"  # sets the constant SOURCE value of SMU3 for sweep measurements
 
       # Integration time
       - ":PAGE:MEAS:MSET:ITIM SHORT"
-      - ":PAGE:MEAS:CONS:SMU1:COMP 0.1"
-      - ":PAGE:MEAS:CONS:SMU2:COMP 0.1"
+      - ":PAGE:MEAS:CONS:SMU3:COMP 0.1"
+      - ":PAGE:MEAS:CONS:SMU4:COMP 0.1"
 
-      - ":PAGE:DISP:LIST 'V4','I1','I2'"  # selects the variable names for LIST display
+
+      - ":PAGE:DISP:LIST 'V3','I3','I4'"  # selects the variable names for LIST display
       - ":PAGE:GLIS:SCAL:AUTO ONCE"
     program:
       minimum:
@@ -97,18 +90,14 @@ setups:
       condition_kwargs:
         int_time: SHORT
 
-  - name: 100v sweep
+  - name: 20v sweep
     instrument:
       - "*CLS" # clears the Error Queue
       - "*RST" # performs an instrument reset
-      - ":PAGE:CHAN:SMU1:MODE V"
-      - ":PAGE:CHAN:SMU2:MODE V"
       - ":PAGE:CHAN:SMU3:MODE V"
       - ":PAGE:CHAN:SMU4:MODE V"
-      - ":PAGE:CHAN:SMU1:FUNC CONS"  # sets the function (FCTN) of SMU1. SMU1 - Emitter
-      - ":PAGE:CHAN:SMU2:FUNC CONS"  # sets the function (FCTN) of SMU2
-      - ":PAGE:CHAN:SMU3:FUNC CONS"
-      - ":PAGE:CHAN:SMU4:FUNC VAR1"  # sets the function (FCTN) of SMU3. SMU3 - Base
+      - ":PAGE:CHAN:SMU3:FUNC VAR1" 
+      - ":PAGE:CHAN:SMU4:FUNC CONS"
       - ":PAGE:CHAN:MODE SWEEP"  # sets the sweep measurement mode
 
       - ":PAGE:MEAS:VAR1:MODE SINGLE"  # sets the SWEEP MODE of VAR1 for sweep measurement.(Single)
@@ -116,19 +105,20 @@ setups:
       - ":PAGE:MEAS:VAR1:START 100"  # sets the sweep START value of VAR1.
       - ":PAGE:MEAS:VAR1:STEP -1"  # sets the sweep STEP value of VAR1 for the linear sweep.
       - ":PAGE:MEAS:VAR1:STOP -2"  # sets the sweep STOP value of VAR1.
+      - ":PAGE:MEAS:VAR1:STOP 100"
       - ":PAGE:MEAS:VAR1:COMP 0.01"  # sets the COMPLIANCE value of VAR1.
       - ":PAGE:MEAS:VAR1:PCOM:STATE OFF"
       #      - ":PAGE:MEAS:HTIM 0"  # sets the HOLD TIME of sweep measurement
       #      - ":PAGE:MEAS:DEL 0"  # sets the DELAY TIME of SMU.
+
       # Integration time
       - ":PAGE:MEAS:MSET:ITIM SHORT"
-      - ":PAGE:MEAS:CONS:SMU1:COMP 0.1"
-      - ":PAGE:MEAS:CONS:SMU2:COMP 0.1"
+      - ":PAGE:MEAS:CONS:SMU3:COMP 0.1"
+      - ":PAGE:MEAS:CONS:SMU4:COMP 0.1"
+      - ":PAGE:MEAS:CONS:SMU3 0" 
+      - ":PAGE:MEAS:CONS:SMU4 0"  # sets the constant SOURCE value of SMU3 for sweep measurements
 
-      - ":PAGE:MEAS:CONS:SMU1 0"  # sets the constant SOURCE value of SMU1 for sweep measurements
-      - ":PAGE:MEAS:CONS:SMU3 0"  # sets the constant SOURCE value of SMU3 for sweep measurements
-
-      - ":PAGE:DISP:LIST 'V4','I1','I2'"  # selects the variable names for LIST display
+      - ":PAGE:DISP:LIST 'V3','I3','I4'"  # selects the variable names for LIST display
     program:
       validation:
         anode_current[-3]: # -1 volt
@@ -136,4 +126,4 @@ setups:
             value: !!float 5e-3
             message: Current leakage is too low. Check if there is a good contact.
       condition_kwargs:
-        int_time: MED
+        int_time: SHORT
