--- a/measure/micronova-calibration-smu2.yaml
+++ b/measure/micronova-calibration-smu2.yaml
@@ -45,8 +45,9 @@ setups:
       - ":PAGE:CHAN:SMU2:MODE V"
 
       
-      - ":PAGE:CHAN:SMU2:FUNC VAR1"  # sets the function (FCTN) of SMU3. SMU3 - Base
+      - ":PAGE:CHAN:SMU2:FUNC VAR1"
       - ":PAGE:CHAN:SMU1:FUNC CONS"  # sets the function (FCTN) of SMU1. SMU1 - Emitter
+      - ":PAGE:CHAN:SMU3:FUNC CONS" 
 
       - ":PAGE:CHAN:MODE SWEEP"  # sets the sweep measurement mode
 
@@ -61,13 +62,11 @@ setups:
       #      - ":PAGE:MEAS:HTIM 0"  # sets the HOLD TIME of sweep measurement
       #      - ":PAGE:MEAS:DEL 0"  # sets the DELAY TIME of SMU.
 
-      - ":PAGE:MEAS:CONS:SMU1 0"  # sets the constant SOURCE value of SMU1 for sweep measurements
-      - ":PAGE:MEAS:CONS:SMU2 0"  # sets the constant SOURCE value of SMU3 for sweep measurements
-
+      #- ":PAGE:MEAS:CONS:SMU1 0"  # sets the constant SOURCE value of SMU1 for sweep measurements
+      - ":PAGE:MEAS:CONS:SMU1 0" 
       # Integration time
       - ":PAGE:MEAS:MSET:ITIM SHORT"
       - ":PAGE:MEAS:CONS:SMU1:COMP 0.1"
-      - ":PAGE:MEAS:CONS:SMU2:COMP 0.1"
 
 
       - ":PAGE:DISP:LIST 'V2','I1','I2'"  # selects the variable names for LIST display
@@ -98,14 +97,14 @@ setups:
       - ":PAGE:CHAN:SMU2:MODE V"
       - ":PAGE:CHAN:SMU2:FUNC VAR1" 
       - ":PAGE:CHAN:SMU1:FUNC CONS"  # sets the function (FCTN) of SMU1. SMU1 - Emitter
+      - ":PAGE:CHAN:SMU3:FUNC CONS" 
       - ":PAGE:CHAN:MODE SWEEP"  # sets the sweep measurement mode
 
       - ":PAGE:MEAS:VAR1:MODE SINGLE"  # sets the SWEEP MODE of VAR1 for sweep measurement.(Single)
       - ":PAGE:MEAS:VAR1:SPAC LIN"  # selects the sweep type of VAR1 as linear staircase
       - ":PAGE:MEAS:VAR1:START 100"  # sets the sweep START value of VAR1.
       - ":PAGE:MEAS:VAR1:STEP -1"  # sets the sweep STEP value of VAR1 for the linear sweep.
-      - ":PAGE:MEAS:VAR1:STOP -2"  # sets the sweep STOP value of VAR1.
-      - ":PAGE:MEAS:VAR1:STOP 100"
+      - ":PAGE:MEAS:VAR1:STOP -100"
       - ":PAGE:MEAS:VAR1:COMP 0.01"  # sets the COMPLIANCE value of VAR1.
       - ":PAGE:MEAS:VAR1:PCOM:STATE OFF"
       #      - ":PAGE:MEAS:HTIM 0"  # sets the HOLD TIME of sweep measurement
@@ -114,9 +113,9 @@ setups:
       # Integration time
       - ":PAGE:MEAS:MSET:ITIM SHORT"
       - ":PAGE:MEAS:CONS:SMU1:COMP 0.1"
-      - ":PAGE:MEAS:CONS:SMU2:COMP 0.1"
-      - ":PAGE:MEAS:CONS:SMU1 0"  # sets the constant SOURCE value of SMU1 for sweep measurements
-      - ":PAGE:MEAS:CONS:SMU2 0"  # sets the constant SOURCE value of SMU3 for sweep measurements
+      #- ":PAGE:MEAS:CONS:SMU2:COMP 0.1"
+      #- ":PAGE:MEAS:CONS:SMU1 0"  # sets the constant SOURCE value of SMU1 for sweep measurements
+      - ":PAGE:MEAS:CONS:SMU2 0" 
 
       - ":PAGE:DISP:LIST 'V2','I1','I2'"  # selects the variable names for LIST display
     program:
